--- a/SoftwAIR-Alpha/Views/Shared/_Layout.cshtml
+++ b/SoftwAIR-Alpha/Views/Shared/_Layout.cshtml
@@ -24,10 +24,13 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        </li>   
+                        @if (User.IsInRole("Administrator"))
+                        {
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Avion" asp-action="Index">Avioni</a>
                         </li>
+                        }
                     </ul>
                 </div>
             </div>
