--- a/SoftwAIR-Alpha/Views/Letovi/Create.cshtml
+++ b/SoftwAIR-Alpha/Views/Letovi/Create.cshtml
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="statusLeta" class="control-label"></label>
-                <select asp-for="statusLeta" class="form-control"></select>
+                <select asp-for="statusLeta" asp-items="Html.GetEnumSelectList<EnumStatusLeta>()"  class="form-control"></select>
                 <span asp-validation-for="statusLeta" class="text-danger"></span>
             </div>
             <div class="form-group">
