--- a/SoftwAIR-Alpha/Views/Home/Privacy.cshtml
+++ b/SoftwAIR-Alpha/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Kontakt";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Ukoliko imate bilo kakvih pitanja, obratite se na email : softwAIR@gmail.com</p>
