dodani viewi i kontroleri

--- a/SoftwAIR-Alpha/Views/Home/Privacy.cshtml
+++ b/SoftwAIR-Alpha/Views/Home/Privacy.cshtml
@@ -3,4 +3,11 @@
 }
 <h1>@ViewData["Title"]</h1>
 
+<style>
+    body {
+        background-image: url(https://wallpapercave.com/wp/wp6903511.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+</style>
 <p>Ukoliko imate bilo kakvih pitanja, obratite se na email : softwAIR@gmail.com</p>
