--- a/SoftwAIR-Alpha/Views/Avion/Index.cshtml
+++ b/SoftwAIR-Alpha/Views/Avion/Index.cshtml
@@ -9,6 +9,14 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<style>
+    body {
+        background-image: url(https://wallpapercave.com/wp/wp6903511.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+</style>
+
 <table class="table">
     <thead>
         <tr>
@@ -28,26 +36,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.brojMjestaPrva)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.brojMjestaBiznis)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.brojMjestaEconomy)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.brojMjestaPrva)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.brojMjestaBiznis)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.brojMjestaEconomy)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
