--- a/SoftwAIR-Alpha/Views/Home/Index.cshtml
+++ b/SoftwAIR-Alpha/Views/Home/Index.cshtml
@@ -2,7 +2,19 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+
+<style>
+    body {
+        background-image: url(https://images.unsplash.com/photo-1549106765-3d312a9425e1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTZ8fHxlbnwwfHx8fA%3D%3D&w=1000&q=80);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+</style>    
+    <div class="text-center">
+        <h1 class="display-4">Dobro dosli u svijet SoftwAIR-a</h1>
+        <p>Odaberite idealnu lokaciju</p>
+        <p>Pogledajte sve dostupne letove </p>
+        <p>Rezervisite svoju kartu </p>
+        <p>Letite sa softwAIR-om</p>
+    </div>
