--- a/SoftwAIR-Alpha/Views/Letovi/Index.cshtml
+++ b/SoftwAIR-Alpha/Views/Letovi/Index.cshtml
@@ -5,12 +5,21 @@
 }
 
 <h1>Index</h1>
-@if(User.IsInRole("Administrator"))
+@if (User.IsInRole("Administrator"))
 {
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
 }
+
+<style>
+    body {
+        background-image: url(https://wallpapercave.com/wp/wp6903511.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+</style>
+
 
 <table class="table">
     <thead>
@@ -34,32 +43,34 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.vrijemePolaska)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.vrijemeDolaska)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.osnovnaCijena)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.naPopustuZaLoyalty)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.statusLeta)
-            </td>
-            <td>
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a>
-                @if (User.IsInRole("Administrator"))
-                {
-                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a>
-                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-                }
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.vrijemePolaska)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.vrijemeDolaska)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.osnovnaCijena)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.naPopustuZaLoyalty)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.statusLeta)
+                </td>
+                <td>
+
+                    @if (User.IsInRole("Administrator"))
+                    {
+                        <a asp-action="Details" asp-route-id="@item.ID">Details</a>
+                        <a asp-action="Edit" asp-route-id="@item.ID">Edit</a>
+                        <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                    }
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
